--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Realtime chat app with rooms",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
+    "start": "node server.js",
     "dev": "nodemon server"
+    
   },
   "author": "Brad Traversy",
   "license": "MIT",
